Update README to 100 payloads: add IOCD chains, cross-family, SSRF, WebLogic, JDK 17 fixes
- Add CC18-27 (IOCD-discovered: DualHashBidiMap, ListOrderedMap, PassiveExpiringMap, HashBag, CaseInsensitiveMap)
- Add CB7, CBJndi5 (DualTreeBidiMap entry), CCJndi3 (DualHashBidiMap JNDI)
- Add ROME6 (CC3+ROME cross-family), Hibernate4 (CC3+Hibernate cross-family)
- Add CommonsCollectionsSSRF — first non-RCE SSRF payload (URL.openStream)
- Add WebLogic1/2 — ClassFilter bypass wrappers
- Document JDK 17+ fixes for CC5, CC9, Jackson1/2, MozillaRhino1, Vaadin1

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>